// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Directiva validation Should report duplicate arguments 1`] = `
Array [
  Object {
    "locations": Array [
      Object {
        "column": 33,
        "line": 6,
        "path": "/tmp/gql-test/61845c25b21c65d9e8e673b94fded3fd9b975d83/schema/main.graphql",
      },
      Object {
        "column": 62,
        "line": 6,
        "path": "/tmp/gql-test/61845c25b21c65d9e8e673b94fded3fd9b975d83/schema/main.graphql",
      },
    ],
    "message": "There can be only one argument named \\"boolArg\\". (UniqueArgumentNames)",
    "severity": "error",
  },
]
`;

exports[`Directiva validation Should report if directive argument type is wrong 1`] = `
Array [
  Object {
    "locations": Array [
      Object {
        "column": 42,
        "line": 5,
        "path": "/tmp/gql-test/eac6d357182c85c06008ea3e640179d48de01f64/schema/main.graphql",
      },
    ],
    "message": "Expected type Boolean, found \\"5\\". (ValuesOfCorrectType)",
    "severity": "error",
  },
]
`;

exports[`Directiva validation Should report if directive required arguments missing 1`] = `
Array [
  Object {
    "locations": Array [
      Object {
        "column": 17,
        "line": 6,
        "path": "/tmp/gql-test/3cdb60d206e1b967517934292bfa73c54cc6e082/schema/main.graphql",
      },
    ],
    "message": "Directive \\"@some_directive\\" argument \\"reqArg\\" of type \\"Boolean!\\" is required but not provided. (ProvidedNonNullArguments)",
    "severity": "error",
  },
]
`;

exports[`Directiva validation Should report if directive used in wrong location 1`] = `
Array [
  Object {
    "locations": Array [
      Object {
        "column": 17,
        "line": 3,
        "path": "/tmp/gql-test/21be8faf5e20f1d2d461e92d0e2ffe9535ea7323/schema/main.graphql",
      },
    ],
    "message": "Directive \\"some_directive\\" may not be used on FIELD_DEFINITION. (KnownDirectives)",
    "severity": "error",
  },
]
`;

exports[`Directiva validation Should report if directive used multiple times in same location 1`] = `
Array [
  Object {
    "locations": Array [
      Object {
        "column": 17,
        "line": 6,
        "path": "/tmp/gql-test/5df0f4c45b8a5dcec7fe1964af80b923a04565d7/schema/main.graphql",
      },
      Object {
        "column": 47,
        "line": 6,
        "path": "/tmp/gql-test/5df0f4c45b8a5dcec7fe1964af80b923a04565d7/schema/main.graphql",
      },
    ],
    "message": "The directive \\"some_directive\\" can only be used once at this location. (UniqueDirectivesPerLocation)",
    "severity": "error",
  },
]
`;

exports[`Directiva validation Should report if unknown directive arguments used 1`] = `
Array [
  Object {
    "locations": Array [
      Object {
        "column": 33,
        "line": 5,
        "path": "/tmp/gql-test/ec1fba4c3b63a2e98e8bed7af4e6cbd4f66be7eb/schema/main.graphql",
      },
    ],
    "message": "Unknown argument \\"test\\" on directive \\"@some_directive\\". (KnownArgumentNames)",
    "severity": "error",
  },
]
`;

exports[`Directiva validation Should report unknown directives 1`] = `
Array [
  Object {
    "locations": Array [
      Object {
        "column": 17,
        "line": 2,
        "path": "/tmp/gql-test/5bc05a95d950f9a1b1e8f00820c08136a797bbf3/schema/main.graphql",
      },
    ],
    "message": "Unknown directive \\"some_directive\\". (KnownDirectives)",
    "severity": "error",
  },
]
`;
